# zmxtools

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml  test.yml
docs/: conf.py  index.rst
docs/_templates/: badges.html  github.html  moreinfo.html
docs/source/: modules.rst  zmxtools.rst
tests/: __init__.py  test_zmxtools.py
tests/agf/: __init__.py  test_agf.py
tests/data/: 352240-1064-Zemax.zar  352240-1064-Zemax.zmx  352240-A-Zemax.zar  352240-A-Zemax.zmx  LA1024-Zemax.zar  LA1024-Zemax.zmx  LA1116-Zemax.zar  LA1116-Zemax.zmx  LB1901-A-ML-Zemax.zar  LB1901-A-ML-Zemax.zmx  TRH127-020-A-ML-Zemax.zar  TRH127-020-A-ML-Zemax.zmx  TRH254-040-A-ML-Zemax.zar  TRH254-040-A-ML-Zemax.zmx  cdgm.agf  lightpath.agf  nikon.agf  ohara.agf  schott.agf
tests/utils/: __init__.py  test_factorial_fraction.py  test_multivariate.py  test_to_length.py  test_zernike.py
tests/zar/: __init__.py  test_cli_unzar.py  test_zar.py
tests/zmx/: __init__.py  test_zmx.py
zmxtools/: __init__.py  agf.py  cli.py  definitions.py  parser.py  zar.py  zmx.py
zmxtools/optical_design/: __init__.py  geometry.py  header.py  light.py  material.py  medium.py  optic.py  source.py  surface.py
zmxtools/utils/: __init__.py  array.py  factorial_fraction.py  io.py  multivariate.py  polar.py  script.py  subsup.py  to_length.py  zernike.py
