[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


[tool.poetry]
name = "zmxtools"
description = "Toolkit to read Zemax OpticStudio files."
version = "0.1.1"
license = "AGPL3"
authors = ["Tom Vettenburg <tom.vettenburg@gmail.com>", "Wouter Vermaelen"]
readme = "README.md"
repository = "https://github.com/tttom/zmxtools"
keywords = ["Optical Design", "Lens Design", "Zemax", "Zemax Archive (ZAR)"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Topic :: Scientific/Engineering :: Physics"]


[tool.poetry.dependencies]
python = "^3.7"
coloredlogs = "^15.0.1"

sphinx = { version = "^4.5",  optional = true }
sphinx-autodoc-typehints = { version = "^1.18", optional = true }
tomlkit = { version = "^0.10", optional = true }
m2r2 = "^0.3.2"


[tool.poetry.dev-dependencies]
mypy = "^0.950"
# Docs, optional, use `poetry install -E docs` to install them:
charset-normalizer = "^2.0.12"
certifi = "^2022.5.18.1"
idna = "^3.3"
pyparsing = "^3.0.9"

wemake-python-styleguide = "^0.16"
flake8-pytest-style = "^1.6"
doc8 = "^0.11"
nitpick = "^0.32"

safety = "^1.10"

pytest = "^7.1"
pytest-cov = "^3.0"
pytest-randomly = "^3.12"


[tool.poetry.extras]
docs = ["sphinx", "sphinx-autodoc-typehints", "m2r2", "tomlkit"]


[tool.poetry.scripts]
unzar = "zmxtools.zar:unzar"


[[tool.poetry.source]]
name = "pypi-test"
url = "https://test.pypi.org/simple/"
default = false
secondary = false

