[tool.poetry]
name = "zmxtools"
description = "Toolkit to read Zemax OpticStudio files."
version = "0.2.0"
license = "AGPL3"
authors = ["Tom Vettenburg <tom.vettenburg@gmail.com>", "Wouter Vermaelen"]
readme = "README.md"
repository = "https://github.com/tttom/zmxtools"
keywords = ["Optical Design", "Lens Design", "Zemax", "Zemax Archive (ZAR)"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Topic :: Scientific/Engineering :: Physics"]


[tool.poetry.dependencies]
python = "^3.10"
importlib_metadata = "^6.8"
coloredlogs = "^15.0.1"
numpy = "^1.26.2"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.1"
sphinx-autodoc-typehints = "^1.25"
sphinx_rtd_theme = "^1.3"
tomli = "^2.0"
#doc8 = "^1.0"
m2r2 = "^0.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7"
charset-normalizer = "^3.3.2"
certifi = "^2023.11.17"
idna = "^3.6"
pyparsing = "^3.1.1"

wemake-python-styleguide = "^0.18.0"
flake8-pytest-style = "^1.7.2"
safety = "^2.3.5"

pytest = "^7.1"
pytest-cov = "^4.0"
pytest-randomly = "^3.12"


[tool.poetry.scripts]
unzar = "zmxtools.cli:unzar"


[[tool.poetry.source]]
name = "pypi-test"
url = "https://test.pypi.org/simple/"
default = false
secondary = false


[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


